--- a/compose.yaml
+++ b/compose.yaml
@@ -8,9 +8,11 @@ services:
       - db1
       - db2
     environment:
-      - SQL_CONNECTION_STRING="Server=db2;Database=Assignment3;User Id=SA;Password=Vym39ejx;MultipleActiveResultSets=True;TrustServerCertificate=True"
+      - SQL_CONNECTION_STRING="Server=db2-1;Database=Assignment3;User Id=SA;Password=Vym39ejx;MultipleActiveResultSets=True;TrustServerCertificate=True"
       - MONGO_CONNECTION_STRING="mongodb://db1:27017/Ass4Log"
-      - API_URL=http://api:8080
+      - API_URL=http://0.0.0.0:8080
+    networks:
+      - backend
 
   db1:
     image: mongo:latest
@@ -19,6 +21,8 @@ services:
       - MONGO_INITDB_ROOT_PASSWORD=secret
     ports:
       - "27017:27017"
+    networks:
+      - backend
 
   db2:
     image: mcr.microsoft.com/mssql/server
@@ -27,3 +31,12 @@ services:
       - SA_PASSWORD=Vym39ejx
     ports:
       - "1433:1433"
+    volumes:
+      - /Users/ehabbasha/Desktop/mssql/data:/var/opt/mssql/data
+
+    networks:
+      - backend
+
+networks:
+  backend:
+    name: assignment4
